--- a/mysite/blog/templates/home.html
+++ b/mysite/blog/templates/home.html
@@ -5,6 +5,11 @@
     <title>Blog Django</title>
 </head>
 <body>
+
+    <a href="indice">INDICE</a> <br>
+    <a href="film">FILM</a> <br>
+    <a href="musica">MUSICA</a> <br>
+
     <h1>Benvenuto nel mio blog Django!</h1>
     <p>Questa è la homepage.</p>
      <p>{{ messaggio }}</p>
